# exploration_development

./: README.md  readme.md
FAEL/: .gitignore
FAEL/hunter2_explorer/: CMakeLists.txt  package.xml
FAEL/hunter2_explorer/launch/: multiple_circle_move.launch  multiple_simulated_campus.launch  multiple_simulated_city.launch  multiple_simulated_city_exploration.launch  multiple_simulated_city_teb.launch  multiple_simulated_city_teb_tansmit_nav.launch  multiple_simulated_forest.launch  multiple_simulated_garage.launch  multiple_simulated_indoor.launch  multiple_simulated_tunnel.launch  rviz_show.launch  single_simulated_city.launch  single_simulated_city_fe_teb.launch  single_simulated_city_no_move.launch  single_simulated_city_rrt_teb.launch  single_simulated_duckietown.launch  single_simulated_tunnel_fe_teb.launch  triple_simulated_city_teb.launch
FAEL/hunter2_explorer/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  planner.yaml  teb_local_planner_params.yaml
FAEL/hunter2_explorer/src/: move_3_seconds.py  run_robot1.py  run_robot2.py  run_robot3.py  transmit_navgoal.py
FAEL/hunter2_explorer/world/: city.world  city_modified.world  city_moving.world  city_openarea.world  city_openarea_moving.world  indoor.world
docker/: build.sh  (+10 more)
src/road_based_explorer/: CMakeLists.txt  package.xml
src/road_based_explorer/launch/: double_test_tunnel.launch  multi_robots_map_merging.launch  multiple_test_traversability.launch  single_test_deploy.launch  single_test_fe.launch  single_test_road_based.launch  single_test_traversability.launch  test_filter_single.launch
src/road_based_explorer/msg/: RoboPointArray.msg
(+124 files in other folders)
